     Lithuanian, Serbian, Turkish
 * User interface:
   * Removed the old obsolete layout algorithm in the new widgets
   * Added unit tests for the new widgets
   * Improved the layout algorithm not to show scrollbars when they make the
     situation worse
   * Add a new transient message dialog
   * Add a new multi page widget
 * WML Engine:
   * Made new turn, turn X, side turn and turn refresh events synchronous.
     (bug #10603)
 * Miscellaneous and bugfixes:
   * Add strict compilation to cmake
   * Let cmake also use the CXXFLAGS and CFLAGS environment variables
   * Fixed a segmentation fault with storyscreens using [if] (bug #35959)

Version 1.7.0:
 * AI:
   * Added command-line option ai_config<number>=<value>
   * Fixed incorrect handling of poisoning attacks when suggesting best attack
     in user interface
   * Added basic history and hot-redeployment capabilities to in-game console.
   * Changed AI Lifecycle handling. Console AI is now persistent between
     invocations.
   * Added AI Arena test map to test AIs in interactive mode ( ai_arena_small )
   * Changed interaction between default AI and Formula AI - made default AI
     fallback to formula recruitment if "recruitment" config option is set in
     AI config.
 * Campaigns:
   * Delfador's Memoirs:
     * New campaign added to mainline from the Wesnoth-UMC-Dev repository.
       (Novice level, 24 scenarios)
   * Eastern Invasion:
     * Fixed the liches not being revealed properly in 'Weldyn Besieged'
   * Heir to the Throne:
     * Made snow fall gradually every turn in 'Northern Winter'.
     * Enforce a 7-hex starting castle to prevent units from appearing inside
       a wall in 'The Scepter of Fire' (bug #13377).
     * Made the number of enemies to defeat depend on the difficulty in
       'Test of the Clan'.
   * Under the Burning Suns:
     * Kaleh advancement:
       * Gave the Hero variation more HP.
       * Reduced XP requirements for the Captain variation.