@@ -13,6 +13,7 @@ Version 1.7.0+svn:
 
   * User interface
     * Improved the layout to take less space in certain cases.
+    * Increase the lineheight in the new dialogs.
 
   * Miscellaneous and bugfixes
     * Fixed a crash in some storyscreens.
