@@ -11,6 +11,7 @@ Version 1.7.0+svn:
      situation worse
    * Add a new transient message dialog
    * Add a new multi page widget
+   * Increase the lineheight in the new dialogs
  * WML Engine:
    * Made new turn, turn X, side turn and turn refresh events synchronous.
      (bug #10603)
